samples/_failures_safe/1761394545_8bdae0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c05d128.c: In function ‘main’:
./samples/SAFE/__tmp_9c05d128.c:156:12: error: missing terminating " character
  156 |     printf("\nTranspose of A:\
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9c05d128.c:156:5: error: expected expression at end of input
  156 |     printf("\nTranspose of A:\
      |     ^~~~~~
./samples/SAFE/__tmp_9c05d128.c:156:5: error: expected declaration or statement at end of input
